# voice-packs

./: .gitignore  BLOG_POST.md  README.md  RESEARCH_SUMMARY.md  api_server.py  prepare_secular.py  pyproject.toml  registry.yaml  train_humor_packs.py  train_pack.py
aquinas/: voice-pack.yaml
aquinas/adapters/: adapter_config.json
aquinas/adapters-1.7b/: adapter_config.json
aquinas/eval/: metrics.json
aquinas/samples/: samples.md
augustine/: voice-pack.yaml
augustine/adapters/: adapter_config.json
augustine/adapters-1.7b/: adapter_config.json
augustine/eval/: metrics.json
augustine/samples/: samples.md
austen/: voice-pack.yaml
chesterton/: voice-pack.yaml
chesterton/adapters/: adapter_config.json
chesterton/adapters-1.7b/: adapter_config.json
chesterton/eval/: metrics.json
chesterton/samples/: samples.md
dickens/: voice-pack.yaml
dickens/adapters/: adapter_config.json
francis-de-sales/: voice-pack.yaml
francis-de-sales/adapters/: adapter_config.json
hemingway/: voice-pack.yaml
john-of-the-cross/: voice-pack.yaml
john-of-the-cross/adapters/: adapter_config.json
lincoln/: voice-pack.yaml
marcus-aurelius/: voice-pack.yaml
newman/: voice-pack.yaml
plato/: voice-pack.yaml
seneca/: voice-pack.yaml
shakespeare/: voice-pack.yaml
teresa-avila/: voice-pack.yaml
tests/: test_audit.py
tolkien-adjacent/: voice-pack.yaml
twain/: voice-pack.yaml
voice_packs/: __init__.py  audit.py  blend.py  cli.py  generate.py  paths.py  prepare.py  serve.py  train.py
wilde/: voice-pack.yaml
wodehouse/: voice-pack.yaml
(+13 files in other folders)
